# backend/docs/swagger.yaml
@@ -22,6 +22,16 @@ definitions:
           $ref: '#/definitions/comments.Comment'
         type: array
     type: object
+  followers.FollowsJson:
+    properties:
+      follows:
+        type: boolean
+    type: object
+  likes.LikedJson:
+    properties:
+      liked:
+        type: boolean
+    type: object
   posts.Post:
     properties:
       commentCount:
@@ -87,6 +97,44 @@ info:
   title: Y API
   version: "1.0"
 paths:
+  /api/v1/followers/check/{follower_id}_{followed_id}:
+    get:
+      description: 'Check if a user follows another user by: id'
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Follower ID
+        format: uuid
+        in: path
+        name: follower_id
+        required: true
+        type: string
+      - description: Followed ID
+        format: uuid
+        in: path
+        name: followed_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/followers.FollowsJson'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: 'Check if a user follows another user by: id'
+      tags:
+      - followers
   /comments:
     post:
       consumes:
@@ -516,6 +564,44 @@ paths:
         "500":
           description: Internal Server Error
       summary: 'Like a post by: id'
+      tags:
+      - likes
+  /likes/check/{user_id}_{post_id}:
+    get:
+      description: 'Check if a user has liked a post by: id'
+      parameters:
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User ID
+        format: uuid
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Post ID
+        format: uuid
+        in: path
+        name: post_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/likes.LikedJson'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: 'Check if a user has liked a post by: id'
       tags:
       - likes
   /login:
