# backend/internal/api/follower_handler.go
@@ -20,9 +20,10 @@ type FollowerHandler struct {
 func (h FollowerHandler) Routes() chi.Router {
 	r := chi.NewRouter()
 
-	r.Post("/{follower_id}_{followed_id}", h.Follow)     // POST /api/v1/followers/{follower_id}_{followed_id} - Follow a user by: id
-	r.Delete("/{follower_id}_{followed_id}", h.Unfollow) // DELETE /api/v1/followers/{follower_id}_{followed_id} - Unfollow a user by: id
-	r.Get("/{user_id}", h.GetFollowers)                  // GET /api/v1/followers/{id} - Read a list of who follows a user by: user_id
+	r.Post("/{follower_id}_{followed_id}", h.Follow)               // POST /api/v1/followers/{follower_id}_{followed_id} - Follow a user by: id
+	r.Delete("/{follower_id}_{followed_id}", h.Unfollow)           // DELETE /api/v1/followers/{follower_id}_{followed_id} - Unfollow a user by: id
+	r.Get("/check/{follower_id}_{followed_id}", h.UserFollowsUser) // GET /api/v1/followers/check/{follower_id}_{followed_id} - Check if a user follows another user by: id
+	r.Get("/{user_id}", h.GetFollowers)                            // GET /api/v1/followers/{id} - Read a list of who follows a user by: user_id
 
 	r.Route("/followed", func(r chi.Router) {
 		r.Get("/{user_id}", h.GetFollowed) // GET /api/v1/followers/followed/{id} - Read a list of who a user follows by: user_id
@@ -152,6 +153,68 @@ func (h FollowerHandler) Unfollow(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusOK)
+}
+
+// UserFollowsUser godoc
+// @Summary        Check if a user follows another user by: id
+// @Description    Check if a user follows another user by: id
+// @Tags           followers
+// @Produce        json
+// @Param          Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param          follower_id path string true "Follower ID" Format(uuid)
+// @Param          followed_id path string true "Followed ID" Format(uuid)
+// @Success        200 {object} followers.FollowsJson
+// @Failure        400
+// @Failure        401
+// @Failure        500
+// @Router         /api/v1/followers/check/{follower_id}_{followed_id} [get]
+func (h FollowerHandler) UserFollowsUser(w http.ResponseWriter, r *http.Request) {
+	logger.ServerLogger.Info(fmt.Sprintf("new request: get %s", r.URL))
+
+	authUser := auth.ForContext(r.Context())
+	if authUser == nil {
+		err := fmt.Errorf("access denied")
+
+		logger.ServerLogger.Warn(err.Error())
+
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	followerId, err := uuid.Parse(chi.URLParam(r, "follower_id"))
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid user id", http.StatusBadRequest)
+		return
+	}
+	followedId, err := uuid.Parse(chi.URLParam(r, "followed_id"))
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid user id", http.StatusBadRequest)
+		return
+	}
+
+	follows, err := h.Usecase.UserFollowsUser(followerId, followedId)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	response, err := json.Marshal(followers.FollowsJson{Follows: follows})
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	w.Write(response)
 }
 
 // GetFollowers godoc
