# backend/internal/services/followers/follower_model.go
@@ -6,3 +6,7 @@ type Follower struct {
 	FollowerID uuid.UUID `json:"followerId"`
 	FollowedID uuid.UUID `json:"followedId"`
 }
+
+type FollowsJson struct {
+	Follows bool `json:"follows"`
+}
