# backend/internal/services/likes/like_model.go
@@ -6,3 +6,7 @@ type Like struct {
 	UserID uuid.UUID `json:"userId"`
 	PostID uuid.UUID `json:"postId"`
 }
+
+type LikedJson struct {
+	Liked bool `json:"liked"`
+}
